# djaodjin-rules

./: .gitignore  Makefile  README.md  changelog  pyproject.toml  requirements.txt  setup.py
docs/: conf.py  custom-rules.rst  getting-started.rst  index.rst  settings.rst
rules/: __init__.py  compat.py  decorators.py  extras.py  middleware.py  mixins.py  models.py  perms.py  settings.py  signals.py  urldecorators.py  utils.py
rules/api/: keys.py  rules.py  serializers.py  sessions.py
rules/static/js/: djaodjin-proxy-angular.js  djaodjin-resources.js  djaodjin-rules-angular.js  djaodjin-rules-vue.js
rules/templates/rules/: app_dashboard.html  engagement.html  forward_error.html
rules/templatetags/: active_dashboard.py
rules/urls/: __init__.py  apply.py  configure.py
rules/urls/api/: __init__.py  proxy.py
rules/views/: __init__.py  app.py  download.py
testsite/: context_processors.py  decorators.py  package.json  requirements-legacy.txt  requirements.txt  settings.py  urls.py  wsgi.py
testsite/fixtures/: test_data.json
testsite/templates/: base.html
testsite/templates/registration/: login.html
